# explore_echidna

./: .gitignore  .pipeline.yml  LICENSE  analyse_temporal_snapshots.py  clusters.py  compute_summary_stats.ipynb  do_simulation_on_network.py  env.ini.template  env.py  examine_temporal_window.py  examine_transfers_for_sizes.py  explore_tau_over_time.qmd  graph_importer.py  hitting_markov.py  hitting_multichain_small.py  hitting_time_analysis.py  hitting_time_multichain.py  laggauss_scaling.ipynb  multichain_exponential.py  multinomial_sample.py  netsim_summariser.py  network_conversion.py  network_simulation.py  new_network_sim.py  numba_sample.py  on_network_simulation.py  probability_over_networks.py  projection_metrics.py  pyproject.toml  rare_path.qmd  readmission_time.py  realisation_summary_stats.py  report.qmd  run_zero_naive_static.py  run_zero_snapshot_sim.py  run_zero_static_sim.py  sankey.py  sim_movement_over_time.qmd  small_case.qmd  small_case_sims.py  (+9 more)
deprecated_simulation_code/: do_simulation_on_network.py  on_network_simulation.py  summary_stats_zero.py
echidna/: __init__.py  examine_transfers_for_sizes.py  hitting_markov.py  hitting_time_multichain.py  netsim_summariser.py  network_conversion.py  network_simulation.py  numba_sample.py  projection_metrics.py  simulation_runner.py  staticify_network.py  util.py
experiments/: .gitignore
misc/: .gitignore  derive_mean_hitting.md  tiny_temporal_network.lgl
notebooks/: aggregated_compare.ipynb  clus_ring.ipynb  compare_hitting_times.qmd  compute_summary_stats.ipynb  departure_rate_over_time.ipynb  (+21 more)
(+62 files in other folders)
